--- a/app/index.html
+++ b/app/index.html
@@ -60,99 +60,116 @@
 
 
 
+
     <div class="slider">
-      <div class="slider__item">
-        <!-- <img src="./img/bg.png" alt=""> -->
-        <div class="liner empty"></div>
-        <div class="liner left">
-          <h1>ФОТООБОИ</h1>
-        </div>
-        <div class="bottom-btns">
-          <div class="liner">
-            <div class="liner__wrapper">
-              <a href="#">Для зала</a>
+
+      <div class="slider-block">
+        <img src="./img/bg.png" alt="">
+        <div class="slider__item">
+
+          <div class="liner empty"></div>
+          <div class="liner left">
+            <h1>ФОТООБОИ</h1>
+          </div>
+          <div class="bottom-btns">
+            <div class="liner">
+              <div class="liner__wrapper">
+                <a href="#">Для зала</a>
+              </div>
+            </div>
+            <div class="liner green">
+              <div class="mixed">от <span>50</span> $/м2</div>
             </div>
           </div>
-          <div class="liner green">
-            <div class="mixed">от <span>50</span> $/м2</div>
+          <span class="slider-subtitle">Более 6000 идей фотообоеев <br>для ГОСТИНОЙ
+          </span>
+          <div class="btn">
+            <a href="#">Смотреть идеи</a>
           </div>
-        </div>
-        <span class="slider-subtitle">Более 6000 идей фотообоее <br>для ГОСТИНОЙ
-        </span>
-        <div class="btn">
-          <a href="#">Смотреть идеи</a>
         </div>
       </div>
 
-      <div class="slider__item">
-        <!-- <img src="./img/bg.png" alt=""> -->
-        <div class="liner empty"></div>
-        <div class="liner left">
-          <h1>ФОТООБОИ</h1>
-        </div>
-        <div class="bottom-btns">
-          <div class="liner">
-            <div class="liner__wrapper">
-              <a href="#">для гостиной</a>
+      <div class="slider-block">
+        <img src="./img/bg.png" alt="">
+        <div class="slider__item">
+
+          <div class="liner empty"></div>
+          <div class="liner left">
+            <h1>ФОТООБОИ</h1>
+          </div>
+          <div class="bottom-btns">
+            <div class="liner">
+              <div class="liner__wrapper">
+                <a href="#">Для гостиной</a>
+              </div>
+            </div>
+            <div class="liner green">
+              <div class="mixed">от <span>60</span> $/м2</div>
             </div>
           </div>
-          <div class="liner green">
-            <div class="mixed">от <span>50</span> $/м2</div>
+          <span class="slider-subtitle">Более 6000 идей фотообоеев <br>для ГОСТИНОЙ
+          </span>
+          <div class="btn">
+            <a href="#">Смотреть идеи</a>
           </div>
-        </div>
-        <span class="slider-subtitle">Более 6000 идей фотообоее <br>для ГОСТИНОЙ
-        </span>
-        <div class="btn">
-          <a href="#">Смотреть идеи</a>
         </div>
       </div>
 
-      <div class="slider__item">
-        <!-- <img src="./img/bg.png" alt=""> -->
-        <div class="liner empty"></div>
-        <div class="liner left">
-          <h1>ФОТООБОИ</h1>
-        </div>
-        <div class="bottom-btns">
-          <div class="liner">
-            <div class="liner__wrapper">
-              <a href="#">для кухни</a>
+      <div class="slider-block">
+        <img src="./img/bg.png" alt="">
+        <div class="slider__item">
+
+          <div class="liner empty"></div>
+          <div class="liner left">
+            <h1>ФОТООБОИ</h1>
+          </div>
+          <div class="bottom-btns">
+            <div class="liner">
+              <div class="liner__wrapper">
+                <a href="#">Для кухни</a>
+              </div>
+            </div>
+            <div class="liner green">
+              <div class="mixed">от <span>70</span> $/м2</div>
             </div>
           </div>
-          <div class="liner green">
-            <div class="mixed">от <span>50</span> $/м2</div>
+          <span class="slider-subtitle">Более 6000 идей фотообоеев <br>для ГОСТИНОЙ
+          </span>
+          <div class="btn">
+            <a href="#">Смотреть идеи</a>
           </div>
-        </div>
-        <span class="slider-subtitle">Более 6000 идей фотообоее <br>для ГОСТИНОЙ
-        </span>
-        <div class="btn">
-          <a href="#">Смотреть идеи</a>
         </div>
       </div>
 
-      <div class="slider__item">
-        <!-- <img src="./img/bg.png" alt=""> -->
-        <div class="liner empty"></div>
-        <div class="liner left">
-          <h1>ФОТООБОИ</h1>
-        </div>
-        <div class="bottom-btns">
-          <div class="liner">
-            <div class="liner__wrapper">
-              <a href="#">для спальни</a>
+      <div class="slider-block">
+        <img src="./img/bg.png" alt="">
+        <div class="slider__item">
+
+          <div class="liner empty"></div>
+          <div class="liner left">
+            <h1>ФОТООБОИ</h1>
+          </div>
+          <div class="bottom-btns">
+            <div class="liner">
+              <div class="liner__wrapper">
+                <a href="#">Для спальни</a>
+              </div>
+            </div>
+            <div class="liner green">
+              <div class="mixed">от <span>80</span> $/м2</div>
             </div>
           </div>
-          <div class="liner green">
-            <div class="mixed">от <span>50</span> $/м2</div>
+          <span class="slider-subtitle">Более 6000 идей фотообоеев <br>для ГОСТИНОЙ
+          </span>
+          <div class="btn">
+            <a href="#">Смотреть идеи</a>
           </div>
         </div>
-        <span class="slider-subtitle">Более 6000 идей фотообоее <br>для ГОСТИНОЙ
-        </span>
-        <div class="btn">
-          <a href="#">Смотреть идеи</a>
-        </div>
       </div>
+
     </div>
+
+
 
     <div class="about">
       <div class="about-block">
